--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@
 
             <!-- Headline -->
             <h3 class="my-4"><b><font color="orange">
-              Aprenda a aplicar as técnicas da <font color="white">neurociência americana </font> para fazer seu filho obedecer, apenas 
-              <p> </font></b><b><font color="orange"> usando sinais que vão </font> <font color="white"> agir no subsconciente dele</font></b></h3>
+              Descubra como mães desesperadas estão aprendendo a aplicar as <font color="white">técnicas da neurociência americana </font> para fazer os filhos obedecerem e se comportarem bem, apenas enviando alguns <font color="white"> sinais sutis para o subconsciente da criança.</font> </h3>
 
              <!-- VSL -->
-             <div id="vid_63c030aebf78e2000a645fa4" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_63c030aebf78e2000a645fa4" src="https://images.converteai.net/320468e2-c16c-4df9-8818-7c1be36ad5a0/players/63c030aebf78e2000a645fa4/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63c030aebf78e2000a645fa4" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63c030aebf78e2000a645fa4">var s=document.createElement("script");s.src="https://scripts.converteai.net/320468e2-c16c-4df9-8818-7c1be36ad5a0/players/63c030aebf78e2000a645fa4/player.js",s.async=!0,document.head.appendChild(s);</script>
+             <div id="vid_63ff98b96a361a0008c272da" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_63ff98b96a361a0008c272da" src="https://images.converteai.net/320468e2-c16c-4df9-8818-7c1be36ad5a0/players/63ff98b96a361a0008c272da/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63ff98b96a361a0008c272da" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63ff98b96a361a0008c272da">var s=document.createElement("script");s.src="https://scripts.converteai.net/320468e2-c16c-4df9-8818-7c1be36ad5a0/players/63ff98b96a361a0008c272da/player.js",s.async=!0,document.head.appendChild(s);</script>
 
              <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.hotmart.com/E77235293L?off=sdmta4wr&checkoutMode=10" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/nHh7LLD" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">Quero mudar o comportamento do meu filho!</span>
                 <span class="span-btn2">Atenção: As vagas são limitadas!</span>
               </a>
