--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               Descubra como mães desesperadas estão aprendendo a aplicar as <font color="white">técnicas da neurociência americana </font> para fazer os filhos obedecerem e se comportarem bem, apenas enviando alguns <font color="white"> sinais sutis para o subconsciente da criança.</font> </h3>
 
              <!-- VSL -->
-             <div id="vid_63ff98b96a361a0008c272da" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_63ff98b96a361a0008c272da" src="https://images.converteai.net/320468e2-c16c-4df9-8818-7c1be36ad5a0/players/63ff98b96a361a0008c272da/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63ff98b96a361a0008c272da" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63ff98b96a361a0008c272da">var s=document.createElement("script");s.src="https://scripts.converteai.net/320468e2-c16c-4df9-8818-7c1be36ad5a0/players/63ff98b96a361a0008c272da/player.js",s.async=!0,document.head.appendChild(s);</script>
+             <div id="vid_64008f5989818f0009c9cace" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_64008f5989818f0009c9cace" src="https://images.converteai.net/320468e2-c16c-4df9-8818-7c1be36ad5a0/players/64008f5989818f0009c9cace/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_64008f5989818f0009c9cace" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_64008f5989818f0009c9cace">var s=document.createElement("script");s.src="https://scripts.converteai.net/320468e2-c16c-4df9-8818-7c1be36ad5a0/players/64008f5989818f0009c9cace/player.js",s.async=!0,document.head.appendChild(s);</script>
 
              <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
@@ -69,7 +69,7 @@
     </header>
 
       <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 776000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1115000); // temporização da Call to Action (em milissegundos)
     </script>
 
 
