--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
              <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/nHh7LLD" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/2czI8ic" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">Quero mudar o comportamento do meu filho!</span>
                 <span class="span-btn2">Atenção: As vagas são limitadas!</span>
               </a>
