--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <img class="img-fluid" src="./assets/img/revelado.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b><font color="orange">
+            <h3 class="my-4"><b><font color="orange"> <font size=4>
               Descubra como mães desesperadas estão aprendendo a aplicar as <font color="white">técnicas da neurociência americana </font> para fazer os filhos obedecerem e se comportarem bem, apenas enviando alguns <font color="white"> sinais sutis para o subconsciente da criança.</font> </h3>
 
              <!-- VSL -->
