--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <img class="img-fluid" src="./assets/img/revelado.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b><font color="orange"> <font size=4>
-              Descubra como mães desesperadas estão aplicando as técnicas da <font color="white"> neurociência americana </font> para fazer os filhos obedecerem, apenas enviando alguns sinais sutis para o <font color="white"> subconsciente da criança.</font> </h3>
+            <h3 class="my-4"><b><font color="DarkSalmon"> <font size=4>
+              Descubra como mães desesperadas estão aplicando as técnicas da <p> <font color="white"> neurociência americana </font> para fazer os filhos obedecerem, <p>apenas enviando alguns sinais sutis para o <font color="white"> subconsciente da criança.</font> </h3>
 
              <!-- VSL -->
              <div id="vid_64063529ae81460009196822" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_64063529ae81460009196822" src="https://images.converteai.net/320468e2-c16c-4df9-8818-7c1be36ad5a0/players/64063529ae81460009196822/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_64063529ae81460009196822" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_64063529ae81460009196822">var s=document.createElement("script");s.src="https://scripts.converteai.net/320468e2-c16c-4df9-8818-7c1be36ad5a0/players/64063529ae81460009196822/player.js",s.async=!0,document.head.appendChild(s);</script>
