--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <img class="img-fluid" src="./assets/img/revelado.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b><font color="DarkSalmon"> <font size=5>
+            <h3 class="my-4"><b><font color="DeepPink"> <font size=5>
               Descubra como mães desesperadas estão aplicando as técnicas da <font color="white"> neurociência americana </font> para fazer os filhos obedecerem, apenas enviando alguns sinais sutis para o <font color="white"> subconsciente da criança.</font> </h3>
 
              <!-- VSL -->
