--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
 
            <!-- Termos de Uso e Política de Privacidade -->
-            <div class="text-white mt-4"><a href="termos.html" class="text-white"> Termos de uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
+            <div class="text-white mt-4"><a href="termos.html" class="text-white"> <font size=2>Termos de uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
           </div>
         </div>
       </div>
