--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
     <footer class="bg-light py-3 text-center">
-      <div 
+      <div class="text-gray"><font size=2>
         <font color="gray">© Copyright. Todos os direitos reservados. Este site não possui relação institucional com Facebook, Instagram, WhatsApp ou Facebook Messenger. As informações disponíveis neste site são estritamente jornalísticas e não substituem o aconselhamento médico profissional. Consulte sempre o seu médico sobre qualquer assunto relacionado com a sua saúde e os seus tratamentos e medicamentos.</font></div>
     </footer>
 
